[gd_scene load_steps=9 format=3 uid="uid://bdnk4mhi2mihh"]

[ext_resource type="Shader" path="res://Shaders/add.gdshader" id="1_4ma7u"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_gpfkh"]
[ext_resource type="VideoStream" path="res://Assets/Video/colors.ogv" id="2_5aiv6"]
[ext_resource type="PackedScene" uid="uid://bw2mlaxycngf6" path="res://Scenes/UI/score_entry.tscn" id="2_sqa73"]
[ext_resource type="Texture2D" uid="uid://bfe08kgkq5rsl" path="res://Assets/logo_v3.png" id="4_lyooe"]
[ext_resource type="Theme" uid="uid://cfd3pq7e4uxiy" path="res://Assets/Default2.tres" id="5_euu5s"]
[ext_resource type="AudioStream" uid="uid://b1p5jpyi7rlms" path="res://Music/01 - Main Title - Great Service.ogg" id="7_tv7js"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tbwrd"]
shader = ExtResource("1_4ma7u")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_gpfkh")
board_entry_scene = ExtResource("2_sqa73")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.027451, 0.227451, 1)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
process_mode = 1
material = SubResource("ShaderMaterial_tbwrd")
offset_right = 1920.0
offset_bottom = 1088.0
stream = ExtResource("2_5aiv6")
autoplay = true
expand = true

[node name="MenuContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 420.0
offset_top = 93.0
offset_right = 1500.0
offset_bottom = 975.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MenuContainer/MainMenuContainer"]
layout_mode = 2
texture = ExtResource("4_lyooe")
stretch_mode = 5

[node name="ArcadeModeButton" type="Button" parent="MenuContainer/MainMenuContainer"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "Arcade Mode"

[node name="LeaderboardsButton" type="Button" parent="MenuContainer/MainMenuContainer"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "Leaderboards"

[node name="SettingsButton" type="Button" parent="MenuContainer/MainMenuContainer"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "Settings"

[node name="QuitButton" type="Button" parent="MenuContainer/MainMenuContainer"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "Quit to Desktop"

[node name="SettingsMenuContainer" type="VBoxContainer" parent="MenuContainer"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MenuContainer/SettingsMenuContainer"]
layout_mode = 2
texture = ExtResource("4_lyooe")
stretch_mode = 5

[node name="Label" type="Label" parent="MenuContainer/SettingsMenuContainer"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "Settings"
horizontal_alignment = 1

[node name="Fullscreen" type="CheckButton" parent="MenuContainer/SettingsMenuContainer"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "Fullscreen"

[node name="Music" type="HBoxContainer" parent="MenuContainer/SettingsMenuContainer"]
layout_mode = 2

[node name="MusicCheck" type="CheckButton" parent="MenuContainer/SettingsMenuContainer/Music"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "Music"

[node name="MusicDb" type="HSlider" parent="MenuContainer/SettingsMenuContainer/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("5_euu5s")
max_value = 1.0
step = 0.001
value = 1.0

[node name="MusicDbLabel" type="Label" parent="MenuContainer/SettingsMenuContainer/Music"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "100"

[node name="FX" type="HBoxContainer" parent="MenuContainer/SettingsMenuContainer"]
layout_mode = 2

[node name="FXCheck" type="CheckButton" parent="MenuContainer/SettingsMenuContainer/FX"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "Sound"

[node name="FXDb" type="HSlider" parent="MenuContainer/SettingsMenuContainer/FX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("5_euu5s")
max_value = 1.0
step = 0.001
value = 1.0

[node name="FXDbLabel" type="Label" parent="MenuContainer/SettingsMenuContainer/FX"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "100"

[node name="BackToMenuButton" type="Button" parent="MenuContainer/SettingsMenuContainer"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "Back to Main Menu"

[node name="LeaderboardsContainer" type="VBoxContainer" parent="MenuContainer"]
visible = false
layout_mode = 2
theme = ExtResource("5_euu5s")

[node name="HSLLabel" type="Label" parent="MenuContainer/LeaderboardsContainer"]
layout_mode = 2
text = "High Score Leaderboards"
horizontal_alignment = 1

[node name="Header" type="HBoxContainer" parent="MenuContainer/LeaderboardsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_euu5s")

[node name="NameHeader" type="Label" parent="MenuContainer/LeaderboardsContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Name"

[node name="ScoreHeader" type="Label" parent="MenuContainer/LeaderboardsContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "High Score"
horizontal_alignment = 2

[node name="LeaderboardScroll" type="ScrollContainer" parent="MenuContainer/LeaderboardsContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="LeaderboardScoresContainer" type="VBoxContainer" parent="MenuContainer/LeaderboardsContainer/LeaderboardScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="BackToMenuButton" type="Button" parent="MenuContainer/LeaderboardsContainer"]
layout_mode = 2
theme = ExtResource("5_euu5s")
text = "Back to Main Menu"

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_tv7js")
autoplay = true
bus = &"Music"

[connection signal="fx_audio_changed" from="." to="." method="_on_fx_audio_changed"]
[connection signal="fx_toggled" from="." to="." method="_on_fx_toggled"]
[connection signal="music_audio_changed" from="." to="." method="_on_music_audio_changed"]
[connection signal="music_toggled" from="." to="." method="_on_music_toggled"]
[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="MenuContainer/MainMenuContainer/ArcadeModeButton" to="." method="_on_arcade_mode_button_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuContainer/LeaderboardsButton" to="." method="_on_leaderboards_button_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="MenuContainer/SettingsMenuContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="MenuContainer/SettingsMenuContainer/Music/MusicCheck" to="." method="_on_music_check_toggled"]
[connection signal="value_changed" from="MenuContainer/SettingsMenuContainer/Music/MusicDb" to="." method="_on_music_db_value_changed"]
[connection signal="toggled" from="MenuContainer/SettingsMenuContainer/FX/FXCheck" to="." method="_on_fx_check_toggled"]
[connection signal="value_changed" from="MenuContainer/SettingsMenuContainer/FX/FXDb" to="." method="_on_fx_db_value_changed"]
[connection signal="pressed" from="MenuContainer/SettingsMenuContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="MenuContainer/LeaderboardsContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="finished" from="MainMenuMusic" to="." method="_on_main_menu_music_finished"]
